--- a/index.html
+++ b/index.html
@@ -155,12 +155,18 @@
               <span class="sr-only">LinkedIn</span>
             </a>
           </li>
-          <li>
-            <a href="https://instagram.com/lilfoaf" target="_blank" rel="noopener noreferrer">
-              <i class="fab fa-instagram" aria-hidden="true"></i>
-              <span class="sr-only">Instagram</span>
-            </a>
-          </li>
+        <li>
+          <a href="https://github.com/ArianV" target="_blank" rel="noopener noreferrer">
+            <i class="fab fa-github" aria-hidden="true"></i>
+            <span class="sr-only">GitHub</span>
+          </a>
+        </li>
+        <li>
+          <a href="https://discord.gg/HUGCsuY3cF" target="_blank" rel="noopener noreferrer">
+            <i class="fab fa-discord" aria-hidden="true"></i>
+            <span class="sr-only">Discord</span>
+          </a>
+        </li>
         </ul>
       </nav>
     </div>
