Fixed Mobile CSS

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
   <!-- Styles -->
-  <link rel="stylesheet" href="assets/styles.css">
+  <link rel="stylesheet" href="assets/styles.css?v=20250914a">
 </head>
 <body>
   <div id="top"></div>
@@ -144,7 +144,7 @@
   </main>
 
   <!-- Footer -->
-  <footer id="contact" class="site-footer" role="contentinfo">
+  <footer id="site-footer" class="site-footer" role="contentinfo">
     <div class="container">
       <p>© 2025 Arian Vahdat. All rights reserved.</p>
       <nav class="social-links" aria-label="Social media">
