Fixed Discord Embed

--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Arian Vahdat — Personal Landing Page</title>
   <meta name="description" content="Personal homepage and portfolio of Arian Vahdat.">
+
+  <!-- Discord Embed -->
+    <meta property="og:title" content="Arian Vahdat" />
+    <meta property="og:description" content="Aspiring Software Engineer / Musician. Here you can view my virtual portfolio!" />
+    <meta property="og:image" content="https://i.imgur.com/dVuik1Q.png" />
+    <meta property="og:url" content="https://arianvahdat.com" />
+    <meta name="theme-color" content="#7e5cc5" /> <!-- Optional: Sets the embed color -->
+
   <!-- Favicon -->
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicon.png">
 
