added new screenshot

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
 
         <main class="slider" data-slider>
           <section class="slide is-active" data-slide>
-            <img src="images/gtavexample.jpg" alt="one">
-            <div class="overlay"><h2>GTA V - Hitman</h2><p>Interactive GTA V mod which allows users to start dynamic missions accross the game map.</p></div>
+            <img src="https://i.imgur.com/GJHbEEU.png" alt="one">
+            <div class="overlay"><h2>PlugBio</h2><p>Song link collection service for musicians to use to promote their content.</p></div>
           </section>
           <section class="slide" data-slide>
             <img src="images/nitroexample.png" alt="two">
